--- a/dartGame/Html/dart.html
+++ b/dartGame/Html/dart.html
@@ -81,7 +81,7 @@
             <div class="resultModal">
                 <button id="modalOpenButton">그래프로 보기!</button>
                 <span>
-                    <a href="./start.html">
+                    <a href="./index.html">
                         <button id="goBack">처음부터 다시!</button></a>
                 </span>
 
