--- a/dartGame/Html/index.html
+++ b/dartGame/Html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gun Game Intro</title>
-    <link rel="stylesheet" href="./../Css/start.css">
+    <link rel="stylesheet" href="./../Css/index.css">
 </head>
 <body>
     <div class="intro-screen">
@@ -16,7 +16,5 @@
             </a>
         </div>
     </div>
-
-    <script src="./../JS/start.js"></script>
 </body>
 </html>
