--- a/dartGame/Html/dart.html
+++ b/dartGame/Html/dart.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>다트게임</title>
-    <link rel="stylesheet" href="./../Css/dart.css">
-    <script type="module" src="./../JS/dart.js"></script>
+    <link rel="stylesheet" href="/Css/dart.css">
+    <script type="module" src="/JS/dart.js"></script>
    <!-- Chart.js 라이브러리 추가 -->
    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
    <!-- Annotation 플러그인 추가 -->
