--- a/dartGame/dart.html
+++ b/dartGame/dart.html
@@ -4,23 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
     <title>다트게임</title>
     <link rel="stylesheet" href="/Css/dart.css">
     <script type="module" src="/JS/dart.js"></script>
-   <!-- Chart.js 라이브러리 추가 -->
-   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-   <!-- Annotation 플러그인 추가 -->
-   <script
-       src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@1.0.0/dist/chartjs-plugin-annotation.min.js"></script>
-
+    <!-- Chart.js 라이브러리 추가 -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- Annotation 플러그인 추가 -->
+    <script
+        src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@1.0.0/dist/chartjs-plugin-annotation.min.js"></script>
 </head>
 
 <body>
-    <h1 class="title">GUN GAME</h1>
     <!-- 스코어보드판 -->
     <div class="playGame">
         <div class="scoreBoard">
+            <h1 class="title">GUN GAME</h1>
             <div id="onePoint">1점</div>
             <div id="twoPoint">2점</div>
             <div id="threePoint">3점</div>
@@ -34,27 +32,59 @@
         </div>
         <!-- 결과값 보여주기 -->
         <div class="allResult">
-            <div class="result"> 결과
-                <div id="resultDisplay">점수와 결과가 여기에 표시됩니다.</div>
+            <div class="result">
+                <div id="resultScore">
+                    <div id="score">0</div>
+                    <div id="score2">Score</div>
+                </div>
+                <div id="resultChance">
+                    <div id="chance">0/0</div>
+                    <div id="chance2">Turn/Chance</div>
+                </div>
+                <div id="resultTotalScore">
+                    <div id="totalScore">0</div>
+                    <div id="totalScore2">TotalScore</div>
+                </div>
+                <div id="resultAverageScore">
+                    <div id="averageScore">0.00</div>
+                    <div id="averageScore2">AverageScore</div>
+                </div>
             </div>
+
+            <!-- 좌표 -->
+            <div class="second-container">
+                <div id="location">
+                    <div id="score">
+                        <span id="x">0</span><span>,</span><span id="y">0</span>
+                    </div>
+                    <div id="location2">Click Cordination</div>
+                </div>
+                <div>
+                    <a href="./dart.html">
+
+                        <button id="goBack">처음부터 다시!</button>
+                    </a>
+                </div>
+            </div>
+
+
             <!-- 점수판 -->
             <div class="scoreNumber">
-                <h1>점수판</h1>
+                <h1>gun scoreboard</h1>
                 <div class="tryLength">
-
                     <table>
                         <thead>
                             <tr>
-                                <th scope="col">1차시기</th>
-                                <th>2차시기</th>
-                                <th>3차시기</th>
-                                <th>4차시기</th>
-                                <th>5차시기</th>
-                                <th>6차시기</th>
-                                <th>7차시기</th>
-                                <th>8차시기</th>
-                                <th>9차시기</th>
-                                <th>10차시기</th>
+                                <th scope="col">1차</th>
+                                <th>2차</th>
+                                <th>3차</th>
+                                <th>4차</th>
+                                <th>5차</th>
+                                <th>6차</th>
+                                <th>7차</th>
+                                <th>8차</th>
+                                <th>9차</th>
+                                <th>10차</th>
                                 <th>총점</th>
                                 <th>평균</th>
                             </tr>
@@ -78,33 +108,15 @@
                     </table>
                 </div>
             </div>
-            <!-- 모달 -->
-            <div class="resultModal">
-                <button id="modalOpenButton">그래프로 보기!</button>
-                <span>
-                    <a href="./index.html">
-                        <button id="goBack">처음부터 다시!</button></a>
-                </span>
 
-                <div id="modalContainer" class="hidden">
-                    <div id="modalContent">
-                        <!-- 누적합 그래프로 보여주기 -->
-                        <div class="scoreGraph">
-                            <canvas id="scoreChart"></canvas>
-                        </div>
-                        <div class="closeModal">
-                        </div>
-                        <button id="modalCloseButton">닫기</button>
-                    </div>
-                </div>
+            <!-- 누적합 그래프로 보여주기 -->
+            <div class="scoreGraph">
+                <canvas id="scoreChart"></canvas>
             </div>
+
         </div>
         <br>
     </div>
-
-
-
-
 </body>
 
 </html>
